style.css
.main-container {
	background-color: #113f67;
	margin: 0;
}

.navigation-bar {
	background-color: #34699a;
	justify-content: center;
	margin: 0;
	padding: 0;
}

.navigation-container {
    display: flex;
    flex-direction: row;
	align-items: center;
	justify-content: flex-start;
	margin-left: 1%
}

.nav-item {
	color: #ffffff;
	padding: 1%;
	text-decoration: none;
	font-size: 2em;
	font-family: monospace;
	transition: #408ab4;
}
.nav-item:active {
	color: #408ab4;
	padding: 1%;
	text-decoration: none;
	font-size: 2em;
	font-family: monospace;
}

.nav-item:hover {
	color: #65c6c4;
	padding: 1%;
	text-decoration: none;
	font-size: 2em;
	font-family: monospace;
}

.menu1 {
    flex: 1;
    align-items: center;
    flex-wrap: wrap;
    justify-content: center;
    background-color: #30e3ca;

}

.content1 {
    flex-grow: 2;
	align-items: stretch;
}

.navigation-button {
    padding: 10px;
    margin: 10px;
}

.about-container {
	display: flex;
	justify-content: space-around;
}

.portfolio-container {
	display: flex;
	justify-content: center;
	padding: 2%;
	flex-direction: column;
}

.screenshot-container {
	display: flex;
	align-items: flex-start;
	justify-content: space-around;
}
.interest-container {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	flex-wrap: wrap;
}
.screenshot {
	width: 15%;
	height: 15%;

}
.project-label {
	color: #408ab4;
	font-family: monospace;
	font-size: 2em;
	margin-bottom: 5%;
}

.link {
	color: #65c6c4;
}
.link2 {
	color: white;
}
.interest-list {
	flex: 1;
	align-items: flex-start;
}
.interest-ranking {
	display: flex;
	justify-content: space-between;
	align-items: flex-start;
	width: 90%;
	flex-wrap: wrap;

}
.interest-item {
	flex: 1 0 30%;
	padding: 10px;
}

.table {
	border: 1px solid white;
	border-color: white;
	margin: auto;
	border-collapse: collapse;
	margin-bottom: 4%;
}
.interest-image {
	padding: 1%
}
.contact-container {
	display: flex;
	align-items: center;
	flex-direction: column;
	justify-content: center;
}

#description-text{
    text-align: center;
}

#profile-image {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

#lucriment {
	flex: 1;
	font-size: 2em;
}

#fallball {
	flex: 1;
	font-size: 2em;
}

#about-label {
	color: #ffffff;
	font-family: monospace;
	font-size: 4em;
	text-decoration: underline;
	margin-bottom: 5%;
}
#contact-label {
	color: #ffffff;
	font-family: monospace;
	font-size: 4em;
	text-decoration: underline;
}
#trees {
	display: flex;
	justify-content: center;

}
#tree-pic {
	width: 20%;
	height: 20%;
	padding: 3%;
	transform: rotate(90deg);
}
#profile-pic {
	width: 20%;
	height: 20%;
	flex: 1;


    transform: rotate(-90deg);
}
#profile-pic:hover {
	width: 20%;
	height: 20%;
	flex: 1;
	src: url("thanos.png");
	-webkit-transform: rotate(-90deg);
    -moz-transform: rotate(-90deg);
    -o-transform: rotate(-90deg);
    -ms-transform: rotate(-90deg);
    transform: rotate(-90deg);
}

#about-me {
	flex: 3;
	font-size: 2em;
}
#contact-info {
	flex: 1;
	font-size: 2em;
}
#portfolio-label {
	color: #ffffff;
	font-family: monospace;
	font-size: 4em;
	text-decoration: underline;
	margin-bottom: 1%;
}
#interests-label {
	color: #ffffff;
	font-family: monospace;
	font-size: 4em;
	text-decoration: underline;
	margin-bottom: 1%;
}
#interest-description {
	font-size: 2em;
	text-align: center;
}
#thanos {
	width: 20%;
	height: 20%;
	align-items: center;
	justify-content: center;
}

mark.orange {
	color: #ff9900;
	background: none;
}

h1 {
    text-align: center;
}
p {
	color: #ffffff;
}

ul {
	color: #ffffff;
	font-size: 2em;
}

ol {
	color: #ffffff;
	font-size: 2em;
}
h2 {
	color: #ffffff;
	font-family: monospace;
	font-size: 2em;

}
hr {
	width: 80%;
height: 8px;
margin-left: auto;
margin-right: auto;
background-color:#34699a;
border: 0 none;

}
table, tr, th {
	border: 1px solid white;
	border-color: white;
	border-collapse: separate;
	color: white;
}

figure {
	align-items: center;
}

td {
	border: 1px solid white;
	padding: 8px;
}
tr:nth-child(odd) {
    background-color: #408ab4;
}

